ADEN-8937 Fix jumping animation

--- a/src/ad-products/styles/_uap.scss
+++ b/src/ad-products/styles/_uap.scss
@@ -485,7 +485,8 @@ body.ctp-vuap-loaded {
 	transition: height $uap-video-animation-duration ease;
 	top: 0;
 
-	&.theme-hivi:not(.theme-resolved):not(.sticky-bfaa) {
+	&.theme-hivi:not(.theme-resolved):not(.sticky-bfaa),
+	&.theme-hivi.theme-resolved:not(.theme-locked) {
 		position: fixed;
 		top: 0;
 	}
